[metadata]
name = publish_eccu
author = CFPB
author-email = tech@cfpb.gov
summary = Publish ECCU files to Akamai
description-file = README.md
license = Public Domain, CC0
[files]
packages =
    publish_eccu
extra_files =
    publish_eccu/PublishECCU.xml
[entry_points]
console_scripts =
    publish_eccu = publish_eccu.publish:main
